@@ -7,3 +7,6 @@ exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character)
 importFrom(methods, new) 
 S3method(with, jobjRef)
 S3method(within, jobjRef)
+S3method(with, jclassName)
+S3method(within, jclassName)
+
