@@ -13,6 +13,9 @@
 ##
 ## Author: Romain Francois <francoisromain@free.fr>
 
+## TODO[romain] : there is some code duplication between with.jobjRef
+##                and with.jclassName
+
 with.jobjRef <- function( data, expr, ...){
   env <- new.env( parent = environment() )
   clazz <- .jcall( data, "Ljava/lang/Class;", "getClass")
@@ -49,10 +52,50 @@ with.jobjRef <- function( data, expr, ...){
 
 within.jobjRef <- function(data, expr, ... ){
   call <- match.call()
-  call[[1]] <- as.name("with")
+  call[[1]] <- as.name("with.jobjRef")
   eval( call, parent.frame() )
   data
 }
 
+with.jclassName <- function( data, expr, ... ){
+	env <- new.env( parent = environment() )
+	clazz <- data@jobj
+	static_fields  <- .jcall( "RJavaTools", "[Ljava/lang/reflect/Field;",  "getStaticFields",  clazz )
+	
+	lapply( static_fields, function(x ){
+	  n <- .jcall( x, "S", "getName" )
+	  makeActiveBinding( n, function(v){
+	    if( missing(v) ){
+	      ## get
+	      .jsimplify( .jcall( x, "Ljava/lang/Object;", "get", .jnull() ) )
+	    } else {
+	      .jcall( x, "V", "set", .jnull(), v )
+	    }
+	  }, env )
+	} )
+
+	static_methods <- .jcall( "RJavaTools", "[Ljava/lang/reflect/Method;",  "getStaticMethods",  clazz )
+	lapply( static_methods, function(m){
+  	  n <- .jcall( m, "S", "getName" )
+  	  if(! exists( n, envir = env, mode = "function" ) ){
+  	    fallback <- tryCatch( match.fun( n ), error = function(e) NULL )
+  	    assign( n, function(...) {
+  	      tryCatch( .jrcall( data@name , n, ...), error = function(e){
+  	        if( !is.null(fallback) && inherits(fallback, "function") ){
+  	          fallback( ... )
+  	        }
+  	      } )
+  	    }, env = env )
+  	  }
+  	} )
+    eval( substitute( expr ), env = env )
+}
+
+within.jclassName <- function(data, expr, ... ){
+  call <- match.call()
+  call[[1]] <- as.name("with.jclassName")
+  eval( call, parent.frame() )
+  data
+}
 
 
